--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,10 @@
   --portfolio-btn-text: #4d5ae5;
   --portfolio-btn-background: #f4f4fd;
   --border-color-btn-portfolio: #e7e9fc;
+  --backgroung-social-icon: #4d5ae5;
+  --color-social-icon: #f4f4fd;
+  --customers-icon-color: #8e8f99;
+  --title-media-color: #ffffff;
 }
 
 body {
@@ -53,6 +57,8 @@ a {
 
 .main-header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .nav-container {
@@ -191,6 +197,7 @@ a {
   background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
     url(../images/people-office.jpg);
   background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
 }
 
@@ -264,7 +271,7 @@ a {
   margin-bottom: 72px;
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.11;
+  line-height: 1.1;
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
@@ -285,8 +292,13 @@ a {
 }
 
 .icon-features {
-  padding: 24px 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
   margin-bottom: 8px;
+  border-radius: 4px;
+  background-color: #f4f4fd;
 }
 
 .text-list {
@@ -341,7 +353,7 @@ a {
 }
 
 .name-workers {
-  padding: 32px 16px;
+  padding: 32px 0;
 }
 
 .suptitle-name {
@@ -368,11 +380,27 @@ a {
 
 .social {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 24px;
+}
+
+.social-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: var(--backgroung-social-icon);
+}
+
+.social-link:hover,
+.social-link:focus {
+  background-color: #404bbf;
 }
 
 .icon-social {
-  fill: #4d5ae5;
+  fill: var(--color-social-icon);
 }
 
 .customers {
@@ -381,13 +409,33 @@ a {
 
 .list-customers {
   display: flex;
-  justify-content: space-between;
+  gap: 24px;
+}
+.logo-customers {
+  width: 168px;
+  height: 88px;
+  width: calc((100% - 120px) / 6);
 }
 
-.logo-customers {
-  padding: 16px 32px;
+.customers-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
   border: 1px solid #8e8f99;
   border-radius: 4px;
+  color: var(--customers-icon-color);
+}
+
+.customers-link:hover,
+.customers-link:focus {
+  border-color: #404bbf;
+  color: #404bbf;
+}
+
+.icon-customers {
+  fill: currentColor;
 }
 
 /* =====/MAIN-CONTAINER===== */
@@ -402,42 +450,52 @@ a {
   color: var(--right-part-logo-footer);
 }
 
-.subtitle-footer {
+.footer-container {
+  display: flex;
+  align-items: baseline;
+}
+
+.footer-content {
+  margin-right: 120px;
+}
+
+.social-footer {
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+}
+
+.title-media {
   margin-bottom: 16px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #ffffff;
-}
-
-.footer-social-media {
-  display: flex;
-}
-
-.social-footer {
-  justify-content: space-between;
-  margin-left: 120px;
+  color: var(--title-media-color);
 }
 
 .link-social-footer {
-  display: block;
-}
-.icon {
-  fill: #4d5ae5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: var(--backgroung-social-icon);
 }
 
-.icon:hover {
-  fill: #31d0aa;
+.link-social-footer:hover,
+.link-social-footer:focus {
+  background-color: #31d0aa;
 }
 
-.icon-item:nth-child(n + 2) {
-  margin-left: 16px;
+.icon-list {
+  display: flex;
+  gap: 16px;
 }
 
 .icon-social-footer {
-  width: 40px;
-  height: 40px;
+  fill: var(--color-social-icon);
 }
 
 .text-item-footer {
@@ -483,6 +541,8 @@ a {
   cursor: pointer;
   color: #ffffff;
   background-color: #404bbf;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .container-btn-portfolio {
@@ -497,13 +557,14 @@ a {
   row-gap: 48px;
 }
 
-.list-link {
-  width: calc((100% - 48px) / 3);
-}
-
-.list-link:hover {
+.link-portfolio:hover,
+.link-portfolio:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.list-link {
+  width: calc((100% - 48px) / 3);
 }
 
 .img {
