--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,6 @@ a {
   font-family: 'Raleway', sans-serif;
   display: inline-block;
   margin-bottom: 16px;
-  margin-right: 76px;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
@@ -382,6 +381,10 @@ a {
   display: flex;
   justify-content: center;
   gap: 24px;
+}
+.item-social {
+  width: 40px;
+  height: 40px;
 }
 
 .social-link {
